# WebCrawler

./: .gitignore  ERROR_REPORTING_IMPLEMENTATION.md  LICENSE  NOTICE  README.MD  app.py  cleaner.py  config.py  download_pdf_links.py  fix_pdf_issue.py  main.py  requirements.txt  stMotor.tsv  start_web_interface.py  test.py  test_1.py  user_preferences.json  web_crawler_gui.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  PDF_BUTTON_SELECTOR_INTEGRATION_PLAN.md  README.md  USER_GUIDE.md
models/: venue.py
rapidpdf/: Cargo.toml  pyproject.toml
rapidpdf/src/: lib.rs
static/css/: file_explorer.css  index.css  products.css
static/js/: index.js  products.js
templates/: file_explorer.html  index.html  products.html
utils/: __init__.py  data_utils.py  scraper_utils.py
